--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,12 @@
-language: objective-c
+language: ruby
+
+matrix:
+  include:
+    - os: linux
+      dist: trusty
+      sudo: required
+    - os: osx
+      osx_image: xcode7.2
 
 before install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; brew install ansible; fi
