--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ matrix:
 
 before install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; brew install ansible; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then pip install ansible; fi
 
 script:
   - make update run
