--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,10 @@ matrix:
     - os: osx
       osx_image: xcode7.2
 
-before install:
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; brew install ansible; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then pip install ansible; fi
+install:
+  - easy_install pip
+  - pip install ansible
 
 script:
+  - echo $TRAVIS_OS_NAME
   - make update run
