--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ matrix:
       osx_image: xcode7.2
 
 install:
-  - easy_install pip
-  - pip install ansible
+  - sudo easy_install pip
+  - sudo pip install ansible
 
 script:
   - echo $TRAVIS_OS_NAME
