skipping roles in linux to get the build green

--- a/roles/common-tools/tasks/main.yml
+++ b/roles/common-tools/tasks/main.yml
@@ -2,7 +2,9 @@
 
 - include: dotfiles.yml
 - include: homebrew.yml
+  when: ansible_os_family == 'Darwin'
 - include: osx-tools.yml
+  when: ansible_os_family == 'Darwin'
 
 - name: Ensure everything in ~/.dotfiles/ is sourced in ~/.bash_profile
   lineinfile: dest=~/.bash_profile create=yes line='for file in ~/.dotfiles/*; do if [ -f "$file" ]; then . $file; fi; done'
