Adding scala support. OSX build tested manually, pending fix

--- a/roles/dev-tools/tasks/atom.yml
+++ b/roles/dev-tools/tasks/atom.yml
@@ -17,6 +17,7 @@
   with_items:
     - ansible-snippets
     - auto-indent
+    - ensime
     - git-plus
     - language-docker
     - language-terraform
@@ -24,6 +25,7 @@
     - markdown-writer
     - minimap
     - minimap-git-diff
+    - scala-format
     - script
     - travis-ci-status
   when: atom_is_installed.rc == 0
