Adding scala language for syntax highlighting in atom

--- a/roles/dev-tools/tasks/atom.yml
+++ b/roles/dev-tools/tasks/atom.yml
@@ -20,6 +20,7 @@
     - ensime
     - git-plus
     - language-docker
+    - language-scala
     - language-terraform
     - linter
     - markdown-writer
