--- a/roles/dev-tools/tasks/scala.yml
+++ b/roles/dev-tools/tasks/scala.yml
@@ -5,8 +5,13 @@
     - sbt
   when: ansible_os_family == 'Darwin'
 
-#- name: Arch | Install scala
+- name: Arch | Install scala
+  pacman: name={{ item }} state=latest update_cache=yes
+  with_items:
+    - scala
+    - sbt
+  become: true
+  when: ansible_os_family == 'Archlinux' or ansible_os_family == 'Manjaro Linux'
 
 - name: Add scala plugins
   copy: src=plugins.sbt dest=~/.sbt/0.13/plugins/ mode=0644
-
