--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ matrix:
 
 install:
   - sudo easy_install pip
+  - sudo pip install --upgrade setuptools || sudo pip install --upgrade setuptools --user python
   - sudo pip install ansible
 
 script:
