--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,9 @@ matrix:
       osx_image: xcode7.2
 
 install:
-  - sudo easy_install pip
-  - sudo pip install --upgrade setuptools || sudo pip install --upgrade setuptools --user python
-  - sudo pip install ansible
+  - easy_install pip
+  - pip install --upgrade setuptools || pip install --upgrade setuptools --user python
+  - pip install ansible
 
 script:
   - echo $TRAVIS_OS_NAME
