--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ matrix:
       osx_image: xcode7.2
 
 install:
-  - easy_install pip
+  - sudo easy_install pip
   - pip install --upgrade setuptools || pip install --upgrade setuptools --user python
   - pip install ansible
 
