--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,8 @@ matrix:
       osx_image: xcode7.2
 
 install:
-  - sudo easy_install pip
-  - pip install --upgrade setuptools || pip install --upgrade setuptools --user python
-  - pip install ansible
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update && brew install ansible; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo easy_install pip && pip install --upgrade setuptools && pip install ansible; fi
 
 script:
-  - echo $TRAVIS_OS_NAME
   - make run
