Removing custom prompt and adding pbcopy/pbpaste alias on linux

--- a/roles/common-tools/tasks/tools.yml
+++ b/roles/common-tools/tasks/tools.yml
@@ -24,6 +24,7 @@
   with_items:
     - hub
     - terminator
+    - xclip
   become: true
   when: ansible_os_family == 'Archlinux' or ansible_os_family == 'Manjaro Linux'
 
