--- a/roles/common-tools/tasks/tools.yml
+++ b/roles/common-tools/tasks/tools.yml
@@ -2,21 +2,27 @@
 - name: OSX | Install homebrew applications
   homebrew: name={{ item }} state=present
   with_items:
-    - archey
     - hub
+    - jq
+    - tree
+    - watch
+    - wget
   when: ansible_os_family == 'Darwin'
 
 - name: OSX | Install homebrew cask applications
   homebrew_cask: name={{ item }} state=present
   with_items:
-    - alfred
     - caffeine
-    - flycut
     - flux
+    - gimp
     - google-chrome
     - iterm2
-    - seil
+    - sketchup
     - slack
+    - spotify
+    - steam
+    - twitterrific
+    - zazu
   when: ansible_os_family == 'Darwin'
 
 - name: Arch | Install applications
@@ -28,13 +34,5 @@
   become: true
   when: ansible_os_family == 'Archlinux' or ansible_os_family == 'Manjaro Linux'
 
-- name: Add archey configuration
-  copy: src=archey-logo dest=~/.config/ mode=0644
-  when: ansible_os_family == 'Darwin'
-
 - name: Add hub dotfile
   copy: src=hub.dotfile dest=~/.dotfiles/ mode=0644
-
-- name: Add archey dotfile
-  copy: src=archey.dotfile dest=~/.dotfiles/ mode=0644
-  when: ansible_os_family == 'Darwin'
