--- a/roles/common-tools/tasks/main.yml
+++ b/roles/common-tools/tasks/main.yml
@@ -1,9 +1,9 @@
 ---
 
-- include: dotfiles.yml
-- include: homebrew.yml
+- include_tasks: dotfiles.yml
+- include_tasks: homebrew.yml
   when: ansible_os_family == 'Darwin'
-- include: tools.yml
-  
+- include_tasks: tools.yml
+
 - name: Ensure everything in ~/.dotfiles/ is sourced in ~/.bash_profile
   lineinfile: dest=~/.bash_profile create=yes line='for file in ~/.dotfiles/*; do if [ -f "$file" ]; then . $file; fi; done'
