--- a/roles/dev-tools/tasks/docker.yml
+++ b/roles/dev-tools/tasks/docker.yml
@@ -1,9 +1,7 @@
 ---
 - name: OSX | Install docker via cask
-  homebrew_cask: name={{ item }} state=present
- with_items:
-   - docker
- when: ansible_os_family == 'Darwin'
+  homebrew_cask: name=docker state=present
+  when: ansible_os_family == 'Darwin'
 
 - name: Arch | Install applications
   pacman: name={{ item }} state=latest update_cache=yes
