--- a/roles/dev-tools/tasks/main.yml
+++ b/roles/dev-tools/tasks/main.yml
@@ -2,13 +2,13 @@
 
 # - include: virtualbox.yml
 #   when: ansible_os_family == 'Darwin'
-- include: osx-apps.yml
+- include_tasks: osx-apps.yml
   when: ansible_os_family == 'Darwin'
 
-- include: docker.yml
-- include: atom.yml
-# - include: scala.yml
-- include: clojure.yml
+- include_tasks: docker.yml
+- include_tasks: atom.yml
+# - include_tasks: scala.yml
+- include_tasks: clojure.yml
 
 - name: Ensure everything in ~/.dotfiles/ is sourced in ~/.bash_profile
   lineinfile: dest=~/.bash_profile create=yes line='for file in ~/.dotfiles/*; do if [ -f "$file" ]; then . $file; fi; done'
