--- a/roles/dev-tools/tasks/osx-apps.yml
+++ b/roles/dev-tools/tasks/osx-apps.yml
@@ -1,17 +1,21 @@
 ---
 
 - name: OSX | Install apps
-  homebrew: name={{ item }} state=latest update_homebrew=yes
+  homebrew:
+    name:
+      - awscli
+      - bind
+      - httpie
+      - terraform
+    state: latest
+    update_homebrew: yes
   ignore_errors: yes
-  with_items:
-    - awscli
-    - bind
-    - httpie
-    - terraform
+
 
 - name: OSX | Install cask apps
-  homebrew_cask: name={{ item }} state=present
+  homebrew_cask:
+    name:
+      - gitup
+      - unity
+    state: present
   ignore_errors: yes
-  with_items:
-    - gitup
-    - unity
