--- a/roles/dev-tools/tasks/docker.yml
+++ b/roles/dev-tools/tasks/docker.yml
@@ -5,25 +5,12 @@
   when: ansible_os_family == 'Darwin'
 
 - name: Arch | Install applications
-  pacman: name={{ item }} state=latest update_cache=yes
-  with_items:
-    - docker
-    - docker-compose
-    - docker-machine
+  pacman:
+    name:
+      - docker
+      - docker-compose
+      - docker-machine
+    state: latest
+    update_cache: yes
   become: true
   when: ansible_os_family == 'Archlinux' or ansible_os_family == 'Manjaro Linux'
-
-- name: Check if atom is installed
-  command: which atom
-  register: atom_is_installed
-  ignore_errors: yes
-
-# apm command source - https://github.com/hnakamur/ansible-role-atom-packages
-- name: Install atom packages
-  apm: name={{item}} state=latest
-  with_items:
-    - language-docker
-  when: atom_is_installed.rc == 0
-
-- name: Add docker dotfile
-  copy: src=docker.dotfile dest=~/.dotfiles/ mode=0644
