--- a/roles/dev-tools/tasks/docker.yml
+++ b/roles/dev-tools/tasks/docker.yml
@@ -1,5 +1,4 @@
 ---
 - name: OSX | Install docker via cask
-  homebrew_cask: name=docker state=present
-  ignore_errors: yes
+  homebrew_cask: name=docker state=upgraded
   when: ansible_os_family == 'Darwin'
