--- a/roles/common-tools/files/.gitconfig
+++ b/roles/common-tools/files/.gitconfig
@@ -12,6 +12,28 @@
 [github]
 	user = funkymonkeymonk
 [alias]
-    co = checkout
-    up = pull --rebase --prune
+      a = add
+      aa = add .
+      aaa = add --update
+      b = branch
+      bd = branch --delete
+      c = commit
+      cm = commit --message
+      co = checkout
+      cob = checkout -b
+      com = checkout master
+      d = diff
+      da = diff HEAD
+      i = init
+      lg = log --graph --oneline --decorate --all
+      ld = git log --pretty=format:"%h %ad %s" --date=short --all
+      p = push
+      s = status
+      st = stash
+      sta = stash apply
+      std = stash drop
+      stl = stash list
+      stp = stash pop
+      sts = stash save
+      up = pull --rebase --prune
     
